--- a/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
+++ b/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
@@ -238,6 +238,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Utilizadores\Create.cshtml" />
     <Content Include="Views\Utilizadores\Index.cshtml" />
+    <Content Include="Views\Utilizadores\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
