Final da aula do dia 10/03/2017

--- a/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
+++ b/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
@@ -186,6 +186,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UtilizadoresController.cs" />
     <Compile Include="Global.asax.cs">
@@ -244,6 +245,8 @@
     <Content Include="Views\Utilizadores\Index.cshtml" />
     <Content Include="Views\Utilizadores\Delete.cshtml" />
     <Content Include="Views\Utilizadores\Edit.cshtml" />
+    <Content Include="Views\Clientes\Index.cshtml" />
+    <Content Include="Views\Clientes\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
