--- a/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
+++ b/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
@@ -187,7 +187,10 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
+    <Compile Include="Controllers\EntradasSaidasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\LogOutController.cs" />
     <Compile Include="Controllers\QuartosController.cs" />
     <Compile Include="Controllers\UtilizadoresController.cs" />
     <Compile Include="Global.asax.cs">
@@ -224,6 +227,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\pesquisarClientes.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config" />
@@ -252,6 +256,13 @@
     <Content Include="Views\Clientes\Delete.cshtml" />
     <Content Include="Views\Quartos\Index.cshtml" />
     <Content Include="Views\Quartos\Create.cshtml" />
+    <Content Include="Views\Quartos\Edit.cshtml" />
+    <Content Include="Views\Quartos\Delete.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\LogOut\LoggedOut.cshtml" />
+    <Content Include="Views\EntradasSaidas\Index.cshtml" />
+    <Content Include="Views\EntradasSaidas\Entrada.cshtml" />
+    <Content Include="Views\EntradasSaidas\Saida.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
