--- a/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
+++ b/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
@@ -227,7 +227,6 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\pesquisarClientes.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config" />
@@ -263,6 +262,9 @@
     <Content Include="Views\EntradasSaidas\Index.cshtml" />
     <Content Include="Views\EntradasSaidas\Entrada.cshtml" />
     <Content Include="Views\EntradasSaidas\Saida.cshtml" />
+    <Content Include="Views\Clientes\Index2.cshtml" />
+    <Content Include="Views\Clientes\Pesquisar.cshtml" />
+    <Content Include="Views\Clientes\Pesquisar2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
