--- a/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
+++ b/MVC_Tutorial_2017/MVC_Tutorial_2017.csproj
@@ -265,6 +265,7 @@
     <Content Include="Views\Clientes\Index2.cshtml" />
     <Content Include="Views\Clientes\Pesquisar.cshtml" />
     <Content Include="Views\Clientes\Pesquisar2.cshtml" />
+    <Content Include="Views\Clientes\Pesquisar3.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
